Fix image paths in index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section id="about">
-            <img src="cojo.jpg" alt="This is a photo from Cody Johnson's album cover. He is smiling in it.">
+            <img src="cojo.jpg" alt="This is a photo from Cody Johnson's album cover. He is smiling in it." width="300">
             <h2>About Cody Johnson</h2>
             <article>
 
